--- a/frontend/src/app/components/app-zone-list/app-zone-list.component.html
+++ b/frontend/src/app/components/app-zone-list/app-zone-list.component.html
@@ -1,15 +1,12 @@
 <div class="zone-list">
     <h2>Zones list</h2>
     <ul>
-        <li *ngFor="let zone of zones">
+        <li *ngFor="let zone of zones" (click)="onSelectZone(zone.id)" [class.selected]="zone.isSelected">
             <div class="zone-info">
                 <span class="zone-name"
                     ><strong>{{ zone.name }}</strong> (ID: {{ zone.id }})</span
                 >
                 <button [disabled]="loading" (click)="onDeleteZone(zone.id)">Delete</button>
-            </div>
-            <div class="zone-coordinates">
-                <span *ngFor="let point of zone.points"> [{{ point?.x }}, {{ point?.y }}] </span>
             </div>
         </li>
     </ul>
