--- a/frontend/src/app/components/app-zone-canvas/app-zone-canvas.component.html
+++ b/frontend/src/app/components/app-zone-canvas/app-zone-canvas.component.html
@@ -1,1 +1,1 @@
-<canvas #canvas width="800" height="800" style="border: 1px solid #ccc"></canvas>
+<canvas #canvas width="800" height="800"></canvas>
