--- a/frontend/src/app/components/app-zone-list/app-zone-list.component.scss
+++ b/frontend/src/app/components/app-zone-list/app-zone-list.component.scss
@@ -1,12 +1,9 @@
 :host {
     .zone-list {
-        width: 100%;
-        max-width: 600px;
-        margin: 0 auto;
         ul {
             list-style-type: none;
             padding: 0;
-            width: 200px;
+            width: 600px;
             li {
                 border: 1px solid #ccc;
                 padding: 10px;
@@ -20,10 +17,11 @@
                 }
                 .zone-info {
                     display: flex;
+                    flex-direction: column;
                     justify-content: space-between;
-                    align-items: center;
-                    margin-bottom: 5px;
+                    align-items: flex-start;
                     button {
+                        align-self: flex-end;
                         background-color: #e74c3c;
                         color: #fff;
                         border: none;
